applied the same settings to in lch background gradient to resolve white overflow issue

--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 /* adjusting the inputs within tables specifically that use numbers */
 html, body {
   background: linear-gradient(purple, blue) no-repeat center center fixed;
-  background: linear-gradient(in lch, purple, blue) no-repeat;
+  background: linear-gradient(in lch, purple, blue) no-repeat center center fixed;
   background-size: cover;
   height: 100%;
-  overflow: hidden;
   color: rgb(39, 127, 156);
 }
 
